# spark-ai-demo

./: README.md  environment.yml  pyproject.toml
.ipynb_checkpoints/: demo-checkpoint.ipynb
