[tool.poetry]
name = "spark-ai-demo"
version = "0.1.0"
description = ""
authors = ["Rafael Sales <rafael.sales@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
pyspark-ai = {extras = ["ingestion", "plot"], version = "^0.1.21"}
jupyterlab = "^4.2.5"
pyspark = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
